--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,7 @@
-# Function dependencies, for example:
-# package>=version
 requests==2.24.0
 emoji
 google-cloud-language
-google-cloud-storage
-wordcloud==1.8.0
+wordcloud
 google-api-python-client==1.11.0
-urllib3==1.25.10
-requests-oauthlib==1.3.0
+urllib3==1.25.9
+requests-oauthlib
